feat: Spring AI 적용